Added chat, game and gamerule packets

--- a/src/Netsphere.Network/Netsphere.Network.csproj
+++ b/src/Netsphere.Network/Netsphere.Network.csproj
@@ -57,6 +57,62 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Chat\BRUserDataDto.cs" />
+    <Compile Include="Data\Chat\ChaserUserDataDto.cs" />
+    <Compile Include="Data\Chat\CombiDto.cs" />
+    <Compile Include="Data\Chat\CPTUserDataDto.cs" />
+    <Compile Include="Data\Chat\DeleteNoteDto.cs" />
+    <Compile Include="Data\Chat\DenyDto.cs" />
+    <Compile Include="Data\Chat\DMUserDataDto.cs" />
+    <Compile Include="Data\Chat\FriendDto.cs" />
+    <Compile Include="Data\Chat\NoteContentDto.cs" />
+    <Compile Include="Data\Chat\NoteDto.cs" />
+    <Compile Include="Data\Chat\NoteGiftDto.cs" />
+    <Compile Include="Data\Chat\TDUserDataDto.cs" />
+    <Compile Include="Data\Chat\UserDataDto.cs" />
+    <Compile Include="Data\GameRule\ArcadeScoreSyncDto.cs" />
+    <Compile Include="Data\GameRule\CaptainLifeDto.cs" />
+    <Compile Include="Data\GameRule\ChangeAvatarUnk1Dto.cs" />
+    <Compile Include="Data\GameRule\ChangeAvatarUnk2Dto.cs" />
+    <Compile Include="Data\GameRule\ChangeItemsUnkDto.cs" />
+    <Compile Include="Data\GameRule\ChangeRuleDto.cs" />
+    <Compile Include="Data\GameRule\ScoreAssistDto.cs" />
+    <Compile Include="Data\GameRule\ScoreDto.cs" />
+    <Compile Include="Data\Game\ArcadeMapScoreDto.cs" />
+    <Compile Include="Data\Game\ArcadeRewardDto.cs" />
+    <Compile Include="Data\Game\ArcadeStageScoreDto.cs" />
+    <Compile Include="Data\Game\BRStatsDto.cs" />
+    <Compile Include="Data\Game\CapsuleRewardDto.cs" />
+    <Compile Include="Data\Game\ChannelInfoDto.cs" />
+    <Compile Include="Data\Game\ChaserStatsDto.cs" />
+    <Compile Include="Data\Game\ClubHistoryDto.cs" />
+    <Compile Include="Data\Game\ClubInfoDto.cs" />
+    <Compile Include="Data\Game\CPTStatsDto.cs" />
+    <Compile Include="Data\Game\DMStatsDto.cs" />
+    <Compile Include="Data\Game\EnterRoomInfoDto.cs" />
+    <Compile Include="Data\Game\EsperChipItemInfoDto.cs" />
+    <Compile Include="Data\Game\InvalidateItemInfoDto.cs" />
+    <Compile Include="Data\Game\ItemDto.cs" />
+    <Compile Include="Data\Game\ItemDurabilityInfoDto.cs" />
+    <Compile Include="Data\Game\MakeRoomDto.cs" />
+    <Compile Include="Data\Game\MixedTeamBriefingDto.cs" />
+    <Compile Include="Data\Game\PlayerClubInfoDto.cs" />
+    <Compile Include="Data\Game\RandomShopDto.cs" />
+    <Compile Include="Data\Game\RandomShopItemDto.cs" />
+    <Compile Include="Data\Game\RoomDto.cs" />
+    <Compile Include="Data\Game\RoomPlayerDto.cs" />
+    <Compile Include="Data\Game\ShopItemDto.cs" />
+    <Compile Include="Data\Game\TaskDto.cs" />
+    <Compile Include="Data\Game\TDStatsDto.cs" />
+    <Compile Include="Message\Chat\C2S.cs" />
+    <Compile Include="Message\Chat\ChatMapper.cs" />
+    <Compile Include="Message\Chat\S2C.cs" />
+    <Compile Include="Message\GameRule\C2S.cs" />
+    <Compile Include="Message\GameRule\GameRuleMapper.cs" />
+    <Compile Include="Message\GameRule\S2C.cs" />
+    <Compile Include="Message\Game\C2S.cs" />
+    <Compile Include="Message\Game\GameMapper.cs" />
+    <Compile Include="Message\Game\S2C.cs" />
     <Compile Include="NetspherePipe.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="OpCodes.cs" />
@@ -69,7 +125,20 @@
     <Compile Include="Message\NetsphereMessage.cs" />
     <Compile Include="Message\NetsphereMessageFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializers\ArrayWithIntPrefixAndIndexSerializer.cs" />
+    <Compile Include="Serializers\ArrayWithShortPrefixSerializer.cs" />
+    <Compile Include="Serializers\CharacterStyleSerializer.cs" />
+    <Compile Include="Serializers\SGameRoomListAckMessageSerializer.cs" />
+    <Compile Include="Serializers\SInventoryInfoAckMessageSerializer.cs" />
+    <Compile Include="Serializers\FixedArraySerializer.cs" />
     <Compile Include="Serializers\ArrayWithIntPrefixSerializer.cs" />
+    <Compile Include="Serializers\IntBooleanSerializer.cs" />
+    <Compile Include="Serializers\LongPeerIdSerializer.cs" />
+    <Compile Include="Serializers\MatchKeySerializer.cs" />
+    <Compile Include="Serializers\ItemNumberSerializer.cs" />
+    <Compile Include="Serializers\SChannelPlayerListAckMessageSerializer.cs" />
+    <Compile Include="Serializers\TimeSpanSerializer.cs" />
+    <Compile Include="Serializers\VersionSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="miniLzo_x64.dll">
