--- a/src/Netsphere.Network/Netsphere.Network.csproj
+++ b/src/Netsphere.Network/Netsphere.Network.csproj
@@ -104,15 +104,21 @@
     <Compile Include="Data\Game\ShopItemDto.cs" />
     <Compile Include="Data\Game\TaskDto.cs" />
     <Compile Include="Data\Game\TDStatsDto.cs" />
+    <Compile Include="Data\Relay\RoomLocation.cs" />
     <Compile Include="Message\Chat\C2S.cs" />
     <Compile Include="Message\Chat\ChatMapper.cs" />
     <Compile Include="Message\Chat\S2C.cs" />
+    <Compile Include="Message\Event\C2C.cs" />
+    <Compile Include="Message\Event\EventMapper.cs" />
     <Compile Include="Message\GameRule\C2S.cs" />
     <Compile Include="Message\GameRule\GameRuleMapper.cs" />
     <Compile Include="Message\GameRule\S2C.cs" />
     <Compile Include="Message\Game\C2S.cs" />
     <Compile Include="Message\Game\GameMapper.cs" />
     <Compile Include="Message\Game\S2C.cs" />
+    <Compile Include="Message\Relay\C2S.cs" />
+    <Compile Include="Message\Relay\RelayMapper.cs" />
+    <Compile Include="Message\Relay\S2C.cs" />
     <Compile Include="NetspherePipe.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="OpCodes.cs" />
@@ -127,6 +133,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializers\ArrayWithIntPrefixAndIndexSerializer.cs" />
     <Compile Include="Serializers\ArrayWithShortPrefixSerializer.cs" />
+    <Compile Include="Serializers\RoomLocationSerializer.cs" />
     <Compile Include="Serializers\CharacterStyleSerializer.cs" />
     <Compile Include="Serializers\SGameRoomListAckMessageSerializer.cs" />
     <Compile Include="Serializers\SInventoryInfoAckMessageSerializer.cs" />
