--- a/src/Auth/Auth.csproj
+++ b/src/Auth/Auth.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{782EB49B-B4BB-4162-9FAF-BA2D39C22515}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Auth</RootNamespace>
+    <RootNamespace>Netsphere</RootNamespace>
     <AssemblyName>Auth</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
