The game server now updates the serverlist

--- a/src/Auth/Auth.csproj
+++ b/src/Auth/Auth.csproj
@@ -47,6 +47,14 @@
       <HintPath>..\..\packages\MySql.Data.6.9.8\lib\net45\MySql.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Nancy.Hosting.Self, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Nancy.Hosting.Self.1.4.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -91,12 +99,18 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="ServerManager.cs" />
+    <Compile Include="WebAPI\ServerListModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Auth.ServiceModel\Auth.ServiceModel.csproj">
+      <Project>{11ab9599-6a32-4411-9e14-1a04b47e9bcd}</Project>
+      <Name>Auth.ServiceModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Netsphere.Database\Netsphere.Database.csproj">
       <Project>{f366589c-6b32-43b1-b8a1-45b4a8cabb28}</Project>
       <Name>Netsphere.Database</Name>
