--- a/src/Auth/packages.config
+++ b/src/Auth/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MySql.Data" version="6.9.8" targetFramework="net46" />
+  <package id="Nancy" version="1.4.3" targetFramework="net46" />
+  <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
   <package id="NLog" version="4.2.3" targetFramework="net46" />
   <package id="Platform.NET" version="1.2.1.276" targetFramework="net46" />
