--- a/src/Game/App.config
+++ b/src/Game/App.config
@@ -18,7 +18,7 @@
 
     <targets>
       <target xsi:type="AsyncWrapper" name="fileTarget" overflowAction="Grow">
-        <target xsi:type="File" fileName="${basedir}/logs/debug_${shortdate}.log" layout="${fileLayout}" keepFileOpen="true"/>
+        <target xsi:type="File" fileName="${basedir}/logs/game_debug_${shortdate}.log" layout="${fileLayout}" keepFileOpen="true"/>
       </target>
 
       <target xsi:type="AsyncWrapper" name="consoleTarget" overflowAction="Grow">
