--- a/src/Auth/App.config
+++ b/src/Auth/App.config
@@ -24,7 +24,7 @@
 
     <targets>
       <target xsi:type="AsyncWrapper" name="fileTarget" overflowAction="Grow">
-        <target xsi:type="File" fileName="${basedir}/logs/debug_${shortdate}.log" layout="${fileLayout}" keepFileOpen="true" />
+        <target xsi:type="File" fileName="${basedir}/logs/auth_debug_${shortdate}.log" layout="${fileLayout}" keepFileOpen="true" />
       </target>
 
       <target xsi:type="AsyncWrapper" name="consoleTarget" overflowAction="Grow">
