--- a/src/Auth/packages.config
+++ b/src/Auth/packages.config
@@ -7,8 +7,8 @@
   <package id="NLog" version="4.2.3" targetFramework="net46" />
   <package id="Platform.NET" version="1.2.1.287" targetFramework="net46" />
   <package id="Platform.Xml.Serialization" version="1.2.1.287" targetFramework="net46" />
-  <package id="Shaolinq" version="1.1.0.966" targetFramework="net46" />
-  <package id="Shaolinq.MySql" version="1.1.0.966" targetFramework="net46" />
-  <package id="Shaolinq.Sqlite" version="1.1.0.966" targetFramework="net46" />
+  <package id="Shaolinq" version="1.0.1.812-rc" targetFramework="net46" />
+  <package id="Shaolinq.MySql" version="1.0.1.812-rc" targetFramework="net46" />
+  <package id="Shaolinq.Sqlite" version="1.0.1.812-rc" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net46" />
 </packages>
