--- a/src/Game/packages.config
+++ b/src/Game/packages.config
@@ -7,9 +7,9 @@
   <package id="Platform.NET" version="1.2.1.287" targetFramework="net46" />
   <package id="Platform.Xml.Serialization" version="1.2.1.287" targetFramework="net46" />
   <package id="RestSharp" version="105.2.3" targetFramework="net46" />
-  <package id="Shaolinq" version="1.1.0.966" targetFramework="net46" />
-  <package id="Shaolinq.MySql" version="1.1.0.966" targetFramework="net46" />
-  <package id="Shaolinq.Sqlite" version="1.1.0.966" targetFramework="net46" />
+  <package id="Shaolinq" version="1.0.1.812-rc" targetFramework="net46" />
+  <package id="Shaolinq.MySql" version="1.0.1.812-rc" targetFramework="net46" />
+  <package id="Shaolinq.Sqlite" version="1.0.1.812-rc" targetFramework="net46" />
   <package id="Stateless" version="2.5.80" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net46" />
 </packages>
