--- a/src/Netsphere.Database/packages.config
+++ b/src/Netsphere.Database/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Platform.NET" version="1.2.1.287" targetFramework="net46" />
   <package id="Platform.Xml.Serialization" version="1.2.1.287" targetFramework="net46" />
-  <package id="Shaolinq" version="1.1.0.966" targetFramework="net46" />
+  <package id="Shaolinq" version="1.0.1.812-rc" targetFramework="net46" />
 </packages>
