--- a/src/Auth/App.config
+++ b/src/Auth/App.config
@@ -1,20 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
-
-  <entityFramework>
-    <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
-    <providers>
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
-    </providers>
-  </entityFramework>
-
-  <connectionStrings>
-    <add name="AuthDatabase" connectionString="metadata=res://*/Auth.AuthDatabaseModel.csdl|res://*/Auth.AuthDatabaseModel.ssdl|res://*/Auth.AuthDatabaseModel.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;password=1234;persistsecurityinfo=True;database=ns_auth;pooling=true&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
 
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd" autoReload="true" internalLogLevel="Off" internalLogFile="nlog-internal.log">
 
@@ -44,9 +32,4 @@
       <logger name="*" minlevel="Debug" writeTo="consoleTarget" />
     </rules>
   </nlog>
-<system.data>
-    <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.8.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-    </DbProviderFactories>
-  </system.data></configuration>
+  </configuration>
