--- a/src/Auth/Auth.csproj
+++ b/src/Auth/Auth.csproj
@@ -43,16 +43,11 @@
     <Reference Include="BlubLib.Network">
       <HintPath>..\..\libs\BlubLib.Network.dll</HintPath>
     </Reference>
+    <Reference Include="BlubLib.Network.SimpleRmi">
+      <HintPath>..\..\libs\BlubLib.Network.SimpleRmi.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Nancy, Version=1.4.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Nancy.1.4.3\lib\net40\Nancy.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Nancy.Hosting.Self, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Nancy.Hosting.Self.1.4.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -93,6 +88,7 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\APIServer.cs" />
     <Compile Include="JsonConverters.cs" />
     <Compile Include="Network\AuthServer.cs" />
     <Compile Include="Network\Service\AuthService.cs" />
@@ -100,7 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="ServerManager.cs" />
-    <Compile Include="WebAPI\ServerListModule.cs" />
+    <Compile Include="API\ServerlistService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
