--- a/src/Auth/Auth.csproj
+++ b/src/Auth/Auth.csproj
@@ -46,6 +46,10 @@
     <Reference Include="BlubLib.Network.SimpleRmi">
       <HintPath>..\..\libs\BlubLib.Network.SimpleRmi.dll</HintPath>
     </Reference>
+    <Reference Include="Hjson, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Hjson.2.1.0\lib\net40\Hjson.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
       <Private>True</Private>
