--- a/src/Auth/packages.config
+++ b/src/Auth/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Hjson" version="2.1.0" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NLog" version="4.2.3" targetFramework="net46" />
