--- a/src/Game/Game.csproj
+++ b/src/Game/Game.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\..\packages\Expressmapper.1.8.1\lib\net46\ExpressMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Hjson, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Hjson.2.1.0\lib\net40\Hjson.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
       <Private>True</Private>
