--- a/src/Auth/App.config
+++ b/src/Auth/App.config
@@ -7,8 +7,8 @@
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd" autoReload="true" internalLogLevel="Off" internalLogFile="nlog-internal.log">
 
     <time xsi:type="FastUTC" />
-    <variable name="fileLayout" value="${longdate}|${level:uppercase=true}|${logger:shortName=true}-&gt;${event-properties:item=CallerMemberName}:${callsite-linenumber}|${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
-    <variable name="consoleLayout" value="[${logger:shortName=true}-&gt;${event-properties:item=CallerMemberName}:${callsite-linenumber}] ${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
+    <variable name="fileLayout" value="${longdate}|${level:uppercase=true}|${logger:shortName=true}:${callsite-linenumber}|${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
+    <variable name="consoleLayout" value="[${logger:shortName=true}] ${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
 
     <targets>
       <target xsi:type="AsyncWrapper" name="fileTarget" overflowAction="Grow">
@@ -32,4 +32,12 @@
       <logger name="*" minlevel="Debug" writeTo="consoleTarget" />
     </rules>
   </nlog>
-  </configuration>
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-6.9.9.0" newVersion="6.9.9.0" />
+            </dependentAssembly>
+        </assemblyBinding>
+    </runtime>
+</configuration>
