--- a/src/Game/App.config
+++ b/src/Game/App.config
@@ -9,8 +9,8 @@
     <time xsi:type="FastUTC" />
     <variable name="accountLayout" value=" [${event-context:item=account_user}&lt;${event-context:item=account_id}&gt;-${event-context:item=account_level}]" />
     <variable name="accountCondition" value="${when:when=length('${event-context:item=account_id}') &gt; 0:inner=${accountLayout}}" />
-    <variable name="fileLayout" value="${longdate}|${level:uppercase=true}|${logger:shortName=true}-&gt;${event-properties:item=CallerMemberName}:${callsite-linenumber}|${accountCondition}|${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
-    <variable name="consoleLayout" value="[${logger:shortName=true}-&gt;${event-properties:item=CallerMemberName}:${callsite-linenumber}]${accountCondition} ${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
+    <variable name="fileLayout" value="${longdate}|${level:uppercase=true}|${logger:shortName=true}:${callsite-linenumber}|${accountCondition}|${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
+    <variable name="consoleLayout" value="[${logger:shortName=true}]${accountCondition} ${message} ${onexception:inner=${newline}${exception:format=tostring}}" />
 
     <targets>
       <target xsi:type="AsyncWrapper" name="fileTarget" overflowAction="Grow">
@@ -34,4 +34,12 @@
       <logger name="*" minlevel="Debug" writeTo="consoleTarget" />
     </rules>
   </nlog>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.9.0" newVersion="6.9.9.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
