--- a/src/Netsphere.Database/packages.config
+++ b/src/Netsphere.Database/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Platform.NET" version="1.2.1.287" targetFramework="net46" />
-  <package id="Platform.Xml.Serialization" version="1.2.1.287" targetFramework="net46" />
-  <package id="Shaolinq" version="1.0.1.812-rc" targetFramework="net46" />
+  <package id="Dapper" version="1.50.2" targetFramework="net46" />
+  <package id="Dapper.FastCrud" version="2.4.0" targetFramework="net46" />
 </packages>
