--- a/src/Game/packages.config
+++ b/src/Game/packages.config
@@ -1,15 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.50.2" targetFramework="net46" />
+  <package id="Dapper.FastCrud" version="2.4.0" targetFramework="net46" />
   <package id="Expressmapper" version="1.8.1" targetFramework="net46" />
   <package id="Hjson" version="2.1.0" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NLog" version="4.3.9" targetFramework="net46" />
-  <package id="Platform.NET" version="1.2.1.287" targetFramework="net46" />
-  <package id="Platform.Xml.Serialization" version="1.2.1.287" targetFramework="net46" />
-  <package id="Shaolinq" version="1.0.1.812-rc" targetFramework="net46" />
-  <package id="Shaolinq.MySql" version="1.0.1.812-rc" targetFramework="net46" />
-  <package id="Shaolinq.Sqlite" version="1.0.1.812-rc" targetFramework="net46" />
   <package id="Stateless" version="2.5.80" targetFramework="net46" />
-  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net46" />
 </packages>
