--- a/src/Netsphere.Network/Netsphere.Network.csproj
+++ b/src/Netsphere.Network/Netsphere.Network.csproj
@@ -35,12 +35,23 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\libs\BlubLib.dll</HintPath>
     </Reference>
-    <Reference Include="BlubLib.Network, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\libs\BlubLib.Network.dll</HintPath>
-    </Reference>
     <Reference Include="BlubLib.Serialization">
       <HintPath>..\..\libs\BlubLib.Serialization.dll</HintPath>
+    </Reference>
+    <Reference Include="DotNetty.Buffers, Version=0.4.0.0, Culture=neutral, PublicKeyToken=bc13ca065fa06c29, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Buffers.0.4.0\lib\net451\DotNetty.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="DotNetty.Common, Version=0.4.0.0, Culture=neutral, PublicKeyToken=bc13ca065fa06c29, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\DotNetty.Common.0.4.0\lib\net451\DotNetty.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.DependencyInjection.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.DependencyInjection.Abstractions.1.0.0\lib\netstandard1.0\Microsoft.Extensions.DependencyInjection.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Logging, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Logging.1.0.0\lib\netstandard1.1\Microsoft.Extensions.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=1.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.Extensions.Logging.Abstractions.1.0.0\lib\netstandard1.1\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="SharpLzo, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -109,32 +120,29 @@
     <Compile Include="Data\P2P\ValueDto.cs" />
     <Compile Include="Data\Relay\RoomLocation.cs" />
     <Compile Include="Message\Chat\C2S.cs" />
-    <Compile Include="Message\Chat\ChatMapper.cs" />
+    <Compile Include="Message\Chat\ChatMessageFactory.cs" />
     <Compile Include="Message\Chat\S2C.cs" />
     <Compile Include="Message\Event\C2C.cs" />
-    <Compile Include="Message\Event\EventMapper.cs" />
+    <Compile Include="Message\Event\EventMessageFactory.cs" />
     <Compile Include="Message\GameRule\C2S.cs" />
-    <Compile Include="Message\GameRule\GameRuleMapper.cs" />
+    <Compile Include="Message\GameRule\GameRuleMessageFactory.cs" />
     <Compile Include="Message\GameRule\S2C.cs" />
     <Compile Include="Message\Game\C2S.cs" />
-    <Compile Include="Message\Game\GameMapper.cs" />
+    <Compile Include="Message\Game\GameMessageFactory.cs" />
     <Compile Include="Message\Game\S2C.cs" />
     <Compile Include="Message\P2P\C2C.cs" />
-    <Compile Include="Message\P2P\P2PMapper.cs" />
+    <Compile Include="Message\P2P\P2PMessageFactory.cs" />
     <Compile Include="Message\Relay\C2S.cs" />
-    <Compile Include="Message\Relay\RelayMapper.cs" />
+    <Compile Include="Message\Relay\RelayMessageFactory.cs" />
     <Compile Include="Message\Relay\S2C.cs" />
-    <Compile Include="NetspherePipe.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="OpCodes.cs" />
     <Compile Include="Data\Auth\ServerInfoDto.cs" />
     <Compile Include="Exceptions.cs" />
     <Compile Include="Extensions.cs" />
-    <Compile Include="Message\Auth\AuthMapper.cs" />
+    <Compile Include="Message\Auth\AuthMessageFactory.cs" />
     <Compile Include="Message\Auth\C2S.cs" />
     <Compile Include="Message\Auth\S2C.cs" />
-    <Compile Include="Message\NetsphereMessage.cs" />
-    <Compile Include="Message\NetsphereMessageFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializers\ArrayWithIntPrefixAndIndexSerializer.cs" />
     <Compile Include="Serializers\ArrayWithShortPrefixSerializer.cs" />
@@ -174,6 +182,7 @@
     <None Include="liblzo.so">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
